cdvplugin header in carrierplugin.h added

--- a/plugin.xml
+++ b/plugin.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" id="com.cordovaprogramming.carrier" version="1.0.0">
 	<name>Carrier</name>
-	<author>John M. Wargo</author>
+	<author>Roman Kuepper</author>
 	<description>Exposes mobile carrier related values to a Cordova application.</description> 
 	<keywords>carrier</keywords>
 	<license>Apache 2.0 License</license>
